kubernetes/examples/k8s/simple-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-frontend
  labels:
    app.kubernetes.io/name: simple-frontend
    app.kubernetes.io/version: "v1.0"
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: simple
    app.kubernetes.io/managed-by: helm
spec:
  selector:
    app: simple-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-frontend
  labels:
    app.kubernetes.io/name: simple-frontend
    app.kubernetes.io/version: "v1.0"
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: simple
    app.kubernetes.io/managed-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-frontend
  template:
    metadata:
      labels:
        app: simple-frontend
        app.kubernetes.io/name: simple-frontend
        app.kubernetes.io/version: "v1.0"
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: simple
        app.kubernetes.io/managed-by: helm
    spec:
      containers:
        - name: simple-frontend
          imagePullPolicy: Always
          image: romanowalex/simple-frontend:v1.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 10
            httpGet:
              path: /
              port: 80
          readinessProbe:
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 10
            httpGet:
              path: /
              port: 80
          ports:
            - name: web
              containerPort: 80
